spacing issues

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -13,7 +13,7 @@
   padding:  .4em 1em 1em 1em;
 }
 .bio-blurb {
-  max-width: 70%;
+  max-width: 100%;
   padding: 1em 0 1em 0;
   font-size: 1rem;
   font-weight: 300;
@@ -152,8 +152,8 @@
   .bio-blurb {
     font-size: .6944rem;
     line-height: 1.3rem;
-    max-width: 88%;
-    padding: 0;
+
+    padding: 0 1em 0 0;
   }
   .bio-portfolio {
     padding: 0em;
@@ -173,7 +173,7 @@
   padding: 0 1.5em;
   }
   .bio-blurb {
-    width: 80%;
+
       font-size: .8333rem;
   line-height: 1.3rem;
   }
@@ -181,7 +181,7 @@
     padding: 2em 1.25em 0em 3em;
   }
   .bio-name {
-    top: 5em;
+    top: 4em;
   }
   .bio-name h2 {
     font-size: 4.5832rem;
